2004-11-07  Josh Triplett  <josh@freedesktop.org>

	* c-client.xsl:
	Update XSLT to deal with change from extension element to
	extension-name and extension-xname attributes on xcb element.

2004-11-06  Josh Triplett  <josh@freedesktop.org>

	* xcb.h:
	* xcb_auth.c:
	* xcb_conn.c:
	* xcb_ext.c:
	* xcb_in.c:
	* xcb_list.c:
	* xcb_out.c:
	* xcb_util.c:
	* xcb_xid.c:
	* xcbext.h:
	* xcbint.h:
	Include license in every file rather than referencing COPYING.
	Update copyright notices to 2004.

	* COPYING:
	Remove non-applicable licenses from COPYING file.

2004-11-06  Josh Triplett  <josh@freedesktop.org>

	* configure.ac:
	* src/.cvsignore:
	* src/Makefile.am:
	* src/xcb.h:
	Merged changes for XML-XCB project.

	* src/c-client.xsl:
	* src/xcb.h:
	Add XSLT binding generator and non-M4 version of xcb.h.
	
	* src/client-c.xcb:
	* src/xcb.h.m4:
	Remove M4 binding generator and M4 version of xcb.h.

	* debian/changelog:
	* debian/control:
	* debian/copyright.debian:
	* debian/rules:
	Updated Debian packaging.

2004-09-30  Jamey Sharp  <jamey@minilop.net>

	* src/xcbext.h:
	* src/xcb_in.c:
	* src/client-c.xcb:
	Renamed XCBWaitReply to XCBWaitForReply for new API.

2004-09-30  Jamey Sharp  <jamey@minilop.net>

	* src/Makefile.am:
	Fix build failure when compiling tests.

2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h.m4:
	* src/xcb_in.c:
	Added XCBPollForEvent function from new API.

2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h.m4:
	* src/xcbext.h:
	* src/client-c.xcb:
	* src/xcb_ext.c:
	Update the extension cache for its new API. The
	optimizations that this API enables are not yet
	implemented, but the current implementation should
	at least function correctly.

2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_util.c:
	* src/xcbext.h:
	Oops, XCBPopcount was supposed to change argument
	types too.

2004-09-29  Jamey Sharp  <jamey@minilop.net>

	* src/client-c.xcb:
	* src/xcb_util.c:
	* src/xcbext.h: