@@ -1,3 +1,10 @@
+2004-11-08  Jamey Sharp  <jamey@minilop.net>
+
+	* src/xcb_conn.c:
+	Make the __thread-based assertion a compile-time
+	option, defaulting to off. It breaks on many systems
+	and isn't critical to XCB's functionality.
+
 2004-11-07  Josh Triplett  <josh@freedesktop.org>
 
 	* c-client.xsl:
